# RGLA-VB-Multidataset

./: .gitignore  AGENTS.md  README.md  environment.yml  pyproject.toml
configs/: datasets.json
configs/experiments/: phase2_final.json  protocol.json
data/manifests/: hannover_expected.json  hannover_local_schema.json  nasa_milling.json
docs/: 00_PROJECT_OVERVIEW.md  01_METHOD_RGLA_VB.md  02_DATASETS_AND_ADAPTERS.md  03_EXPERIMENT_AGENT_PLAN.md  04_DEEPSEEK_V4_IMPLEMENTATION_GUIDE.md  05_ACCEPTANCE_TESTS.md  06_MIGRATION_RECORD.md
docs/references/: CONTINUOUS_VB_INNOVATION_FRAMEWORK_EXPERIMENT_PLAN.md  LITERATURE_REVIEW_SMALL_SAMPLE_CROSS_DOMAIN_TOOL_WEAR.md  QUICK_IMPROVEMENT_PLAN_TRI_HEAD_CONFIDENCE.md  TARGET_PREFIX_30_FINETUNE_SUFFIX_70_COMMANDS.md
legacy/scripts/: evaluate_prediction_curves.py  export_seed_predictions.py  phm_bridge.py  phm_paper_regression_pipeline.py  phm_proposed_pipeline.py  (+1 more)
tasks/: T001_FREEZE_LEGACY_BASELINE.md  T005_REVISE_DUAL_TASK_ARCHITECTURE.md  T010_NASA_ADAPTER.md  T011_HANNOVER_ADAPTER.md  T015_PORT_MODEL_COMPONENTS.md  T016_PORT_BASELINE_TRAINER.md  T020_GENERATED_RELIABILITY.md  T021_SOFT_LIFECYCLE.md  T022_RGLA_ALIGNMENT.md  T023_DARE_GRAM_BASELINE.md  T025_INTEGRATE_METHODS.md  T030_EXPERIMENT_RUNNER.md  T040_ANALYSIS_AND_FIGURES.md  T050_LIFECYCLE_LOCAL_AUGMENTATION.md  T051_MULTISCALE_1D_ENCODER.md  T052_LIFECYCLE_TCN_DUAL_HEAD.md  T053_UNCERTAINTY_MEAN_TEACHER.md  T054_INTEGRATE_DUAL_TASK_FRAMEWORK.md
tests/: test_hannover_adapter.py  test_nasa_adapter.py  test_registry.py
tools/: download_nasa_milling.py
(+8 files in other folders)
